include(GNUInstallDirs)

if(USE_PYTHON AND CMAKE_INSTALL_DATAROOTDIR)

  set(LEDGER_PYTHON_EXAMPLES_INSTALL_DIR "${CMAKE_INSTALL_DATAROOTDIR}" CACHE PATH
    "Directory to install ledger Python examples into")

  install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    DESTINATION "${LEDGER_PYTHON_EXAMPLES_INSTALL_DIR}"
    USE_SOURCE_PERMISSIONS
    PATTERN CMakeLists.txt EXCLUDE)

endif()
