# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(gdtoa, 1.0, David M. Gay)
AM_INIT_AUTOMAKE(gdtoa, 1.0)
AC_CONFIG_SRCDIR([gdtoa.c])
AC_CONFIG_HEADERS([acconf.h])

# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

# Checks for header files.
AC_STDC_HEADERS
AC_HAVE_HEADERS(math.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
