[package]
name = "ledger-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core accounting engine for Ledger - a powerful command-line accounting system"

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
nom = { workspace = true }
ledger-math = { path = "../ledger-math" }
num-bigint = { workspace = true }
num-rational = { workspace = true }

# Additional core dependencies
once_cell = "1.19"
indexmap = "2.1"
bitflags = "2.4"
fnv = "1.0"
lru = "0.12"
moka = { version = "0.12", features = ["sync"] }

# Performance optimization dependencies
smallvec = { workspace = true }
compact_str = { workspace = true }
ahash = { workspace = true }
bumpalo = { workspace = true }
memmap2 = { workspace = true }
rayon = "1.8"
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
quickcheck = { workspace = true }
criterion = { workspace = true }
tempfile = "3.8"
insta = "1.43.2"
textwrap = "0.16.2"

[build-dependencies]
cbindgen = "0.26"

[lib]
name = "ledger_core"
path = "src/lib.rs"

[[bench]]
name = "amount_bench"
harness = false

[[bench]]
name = "balance_bench"
harness = false
