[package]
name = "ledger-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Test framework for Ledger Rust implementation"

[dependencies]
# ledger-core = { path = "../ledger-core" }  # Temporarily disabled due to compilation issues
# ledger-cli = { path = "../ledger-cli" }    # Temporarily disabled due to compilation issues
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
clap.workspace = true

# Test-specific dependencies
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
walkdir = "2.4"
similar = "2.3"  # For diff generation
rayon = "1.8"  # For parallel test execution
indicatif = "0.17"  # For progress bars
console = "0.15"  # For colored output
once_cell = "1.19"
shlex = "1.3"  # For command parsing
futures = "0.3"  # For async utilities

[dev-dependencies]
proptest.workspace = true

[features]
default = []
python-bindings = ["pyo3"]
fuzzing = ["cargo-fuzz"]

[dependencies.pyo3]
version = "0.20"
features = ["auto-initialize"]
optional = true

[dependencies.cargo-fuzz]
version = "0.11"
optional = true